# Merged-App

./: .dockerignore  .env.docker.template  .env.template  .gitignore  CHANGELOG.md  Dockerfile  MVPreq.md  README.md  backup-database.sh  build_docs.py  build_docs_simple.py  chat_system_prompt.txt  cli.py  conversation_memory.json  docker-compose.yml  docker-setup.sh  docs_and_serve.py  format_code.py  lint_code.py  main.py  objectives.md  pyproject.toml  pytest.ini  quiz_questions.json  requirements.txt  run_tests.py  serve_docs.py  setup.sh  socratic_tutor.db  system_prompt.txt  test-chroma.py  test.html  test_azure_openai.py  type_check.py
config/: chat_system_prompt.txt  chat_welcome_message.txt  feedback_prompt_correct.txt  feedback_prompt_incorrect.txt  system_prompt.txt
data/: socratic_tutor.db  socratic_tutor_db  system_prompts.json
docs/: CHANGELOG.md  README.md  api.md  api.rst  api_examples.rst  api_structure.md  conf.py  configuration.md  configuration.rst  core_modules.rst  development.md  development.rst  development_tools.rst  index.rst  installation.md  installation.rst  modules.rst  testing.md  testing.rst  troubleshooting.md  troubleshooting.rst  usage.rst
docs/_static/: custom.css  custom.js
scripts/: __init__.py  build_docs.py  build_docs_simple.py  docs_and_serve.py  format_code.py  lint_code.py  run_tests.py  seed_Questions_and_Answers.py  seed_objectives.py  seed_sqlite_db.py  serve_docs.py  type_check.py
src/question_app/: __init__.py  main.py
src/question_app/api/: __init__.py  canvas.py  chat.py  debug.py  objectives.py  questions.py  system_prompt.py  vector_store.py
src/question_app/core/: __init__.py  app.py  config.py  logging.py
src/question_app/models/: __init__.py  objective.py  question.py  tutor.py
src/question_app/services/: __init__.py  ai_service.py  database.py
src/question_app/services/tutor/: hybrid_system.py  interfaces.py  simple_system.py
src/question_app/utils/: __init__.py  file_utils.py  text_utils.py
templates/: associate_objectives.html  chat.html  chat_system_prompt_edit.html  edit_question.html  index.html  objectives.html  system_prompt_edit.html  test_system_prompt.html
tests/: README.md  __init__.py  azure_openai_test_script.py  conftest.py  test_ai_integration.py  test_api_endpoints.py  test_integration.py  test_utility_functions.py
tests/e2e/: test_full_app.py
tests/integration/test_api/: test_questions.py
tests/unit/test_core/: test_app.py  test_config.py
tests/unit/test_services/: test_ai_service.py
tests/unit/test_utils/: test_file_utils.py  test_text_utils.py
