[tool.poetry]
name = "question_app"
version = "0.1.0"
description = "A comprehensive web application for managing Canvas LMS quiz questions with AI-powered feedback generation and an intelligent chat assistant using RAG (Retrieval-Augmented Generation)."
authors = ["Bryce Kayanuma <BrycePK@vt.edu>"]
readme = "README.md"
packages = [{include = "*", from = "."}]  # Include all Python files from root

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
chromadb = "^0.4.0"
beautifulsoup4 = "^4.12.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
start = "main:start"
dev = "main:dev"
format = "questionapp.scripts:format_code"
sort = "questionapp.scripts:sort_imports"
lint = "questionapp.scripts:lint"
test = "questionapp.scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3