[tool.poetry]
name = "question_app"
version = "0.2.0"
description = "A comprehensive web application for managing Canvas LMS quiz questions with AI-powered feedback generation and an intelligent chat assistant using RAG (Retrieval-Augmented Generation)."
authors = ["Bryce Kayanuma <BrycePK@vt.edu>", "Robert Fentress <learn@vt.edu>"]
readme = "README.md"
packages = [{include = "question_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
chromadb = "^0.4.0"
beautifulsoup4 = "^4.12.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"
mypy = "^1.5.1"
pyright = "^1.1.300"

[tool.poetry.scripts]
start = "question_app.main:start"
dev = "question_app.main:dev"
docs = "scripts.build_docs:main"
docs-simple = "scripts.build_docs_simple:main"
serve-docs = "scripts.serve_docs:main"
docs-serve = "scripts.docs_and_serve:main"
lint = "scripts.lint_code:main"
format = "scripts.format_code:main"
type-check = "scripts.type_check:main"
test = "scripts.run_tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3